[project]
name = "comfyuijasonnode"
description = "Nodes:SDXLMixSampler, LatentByRatio"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/lrzjason/ComfyUIJasonNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUIJasonNode"
Icon = ""
